--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <div class="p-1">
       <h1 class="text-center text-white">Conversor de Imagens</h1>
       <h2 class="text-center mt-4 fs-4">
-        Converta várias imagens para os formatos:<br> JPG, PNG, WebP, SVG ou PDF 
+        Converta imagens para os formatos:<br> JPG, PNG, WebP, SVG ou PDF. 
       </h2>      
     </div>   
   </header>
@@ -50,40 +50,52 @@
   </div>
 
 
-<section class="py-5"> 
+<section class="py-5 px-3 d-flex flex-wrap justify-content-center"> 
 
-  <div class="m-2 card-box">
+  <div class="m-2 col-11 col-sm-10 col-md-4 col-lg-3 card-box">
     <h3>100% Gratuito</h3>
-    <p>Converta suas imagens <strong>gratuitamente</strong>, sem limites diários ou restrições de uso. 
+    <div class="h-auto mt-2">
+        <p>Converta suas imagens <strong>gratuitamente</strong>, sem limites diários ou restrições de uso. 
       Rápido, simples e totalmente online.</p>
+    </div>
   </div>
 
-  <div class="m-2 card-box">
+   <div class="m-2 col-11 col-sm-10 col-md-4 col-lg-3 card-box">
     <h3>Funciona Online</h3>
-    <p>O nosso <strong>conversor de imagens online</strong> não requer instalação ou download de programas. 
+    <div class="h-auto mt-2">
+        <p>O nosso <strong>conversor de imagens online</strong> não requer instalação ou download de programas. 
       Basta carregar as suas fotos e convertê-las diretamente no navegador.</p>
+    </div>
   </div>
 
-  <div class="m-2 card-box">
+   <div class="m-2 col-11 col-sm-10 col-md-4 col-lg-3 card-box">
     <h3>Suporta Diversos Formatos</h3>
-    <p>Converta imagens para <strong>JPG, PNG, WebP, SVG e PDF.</strong></p>
+    <div class="h-auto mt-2">
+        <p>Converta imagens para <strong>JPG, PNG, WebP, SVG e PDF.</strong></p>
   </div>
+    </div>
 
-  <div class="m-2 card-box">
+   <div class="m-2 col-11 col-sm-10 col-md-4 col-lg-3 card-box">
     <h3>Conversor Seguro</h3>
-    <p>Os arquivos são processados de forma privada e <strong>excluídos após o download</strong>, garantindo que as suas imagens não fiquem armazenadas no servidor.</p>
+    <div class="h-auto mt-2">
+        <p>Os arquivos são processados de forma privada e <strong>excluídos após o download</strong>, garantindo que as suas imagens não fiquem armazenadas no servidor.</p>
   </div>
+    </div>
 
-  <div class="m-2 card-box">
+   <div class="m-2 col-11 col-sm-10 col-md-4 col-lg-3 card-box">
     <h3>Como Converter</h3>
-    <p>Arraste e solte os arquivos, clique em <em>Converter</em> e faça o download do resultado. 
+    <div class="h-auto mt-2">
+        <p>Arraste e solte os arquivos, clique em <em>Converter</em> e faça o download do resultado. 
       Um processo rápido, simples e totalmente online.</p>
+    </div>
   </div>
 
-  <div class="m-2 card-box">
+   <div class="m-2 col-11 col-sm-10 col-md-4 col-lg-3 card-box">
     <h3>Simples e Rápido</h3>
-    <p>Criado para ser simples e rápido: em apenas um clique, a ferramenta realiza a 
+    <div class="h-auto mt-2">
+        <p>Criado para ser simples e rápido: em apenas um clique, a ferramenta realiza a 
       <strong>conversão de imagens</strong> sem complicações.</p>
+    </div>
   </div>
 </section>
 
