--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,22 @@
   <title>Conversor de Imagens</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
+
+  <meta name="description" content="Converta imagens online para JPG, PNG, WebP, SVG ou PDF. Ferramenta gratuita, rápida e segura que funciona diretamente no navegador.">
+  <meta name="keywords" content="conversor de imagens, converter imagens, jpg para png, webp para jpg, svg para png, converter imagem online, conversor gratuito, ferramenta de conversão">
+  <meta name="author" content="Conversor de Imagens">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Conversor de Imagens Online - JPG, PNG, WebP, SVG, PDF">
+  <meta property="og:description" content="Converta suas imagens gratuitamente para JPG, PNG, WebP, SVG ou PDF de forma rápida e segura.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://https://conversor-de-imagens.onrender.com/">
+  <meta property="og:image" content="https://seu-site-aqui.com/imagem-preview.png">
+  <meta property="og:locale" content="pt_BR">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Conversor de Imagens Online - Gratuito e Seguro">
+  <meta name="twitter:description" content="Converta imagens para JPG, PNG, WebP, SVG e PDF sem instalar nada. 100% gratuito.">
+  <meta name="twitter:image" content="https://seu-site-aqui.com/imagem-preview.png">
+
 </head>
 <body>
 
